# serializer version: 1
# name: test_entry_diagnostics[view_plus]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': 'client_id',
        'secret': 'secret',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'client_id',
      'version': 1,
    }),
    'devices': dict({
      'Living Room': dict({
        'device_type': 'VIEW_PLUS',
        'is_active': True,
        'product_name': 'View Plus',
        'sensor_types': dict({
          '__type': "<class 'dict_keys'>",
          'repr': "dict_keys(['battery', 'co2', 'humidity', 'pm1', 'pm25', 'pressure', 'radonShortTermAvg', 'temp', 'voc'])",
        }),
        'sensors': dict({
          'battery': 1.1,
          'co2': 2.2,
          'humidity': 3.3,
          'pm1': 4.4,
          'pm25': 5.5,
          'pressure': 6.6,
          'radonShortTermAvg': 7.7,
          'temp': 8.8,
          'voc': 9.9,
        }),
      }),
    }),
  })
# ---
# name: test_entry_diagnostics[wave_enhance]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': 'client_id',
        'secret': 'secret',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'client_id',
      'version': 1,
    }),
    'devices': dict({
      'Bedroom': dict({
        'device_type': 'WAVE_ENHANCE',
        'is_active': True,
        'product_name': 'Wave Enhance',
        'sensor_types': dict({
          '__type': "<class 'dict_keys'>",
          'repr': "dict_keys(['battery', 'co2', 'humidity', 'lux', 'pressure', 'sla', 'temp', 'voc'])",
        }),
        'sensors': dict({
          'battery': 1.1,
          'co2': 2.2,
          'humidity': 3.3,
          'lux': 4.4,
          'pressure': 5.5,
          'sla': 6.6,
          'temp': 7.7,
          'voc': 8.8,
        }),
      }),
    }),
  })
# ---
# name: test_entry_diagnostics[wave_plus]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': 'client_id',
        'secret': 'secret',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'client_id',
      'version': 1,
    }),
    'devices': dict({
      'Office': dict({
        'device_type': 'WAVE_PLUS',
        'is_active': True,
        'product_name': 'Wave Plus',
        'sensor_types': dict({
          '__type': "<class 'dict_keys'>",
          'repr': "dict_keys(['battery', 'co2', 'humidity', 'pressure', 'radonShortTermAvg', 'temp', 'voc'])",
        }),
        'sensors': dict({
          'battery': 1.1,
          'co2': 2.2,
          'humidity': 3.3,
          'pressure': 4.4,
          'radonShortTermAvg': 5.5,
          'temp': 6.6,
          'voc': 7.7,
        }),
      }),
    }),
  })
# ---
